write: fix horizontal scrollbar

--- a/packages/write/ui/menu.css
+++ b/packages/write/ui/menu.css
@@ -102,6 +102,7 @@
 	margin-top:0.5em;
 	margin: 0;
 	background: #222;
+	max-width: 100%;
 }
 #move.inline > .item {
 	display:none;
