--- a/packages/write/ui/write.css
+++ b/packages/write/ui/write.css
@@ -114,6 +114,7 @@ body[data-mode="read"] #pageboard-read > iframe {
 	border-top: 1px solid #666;
 	text-align: right;
 	font-size: 1.1rem;
+	max-width: 100%;
 }
 #breadcrumb > ul {
 	text-align:left;
